Abuse !important to fix phase two layout issues.

--- a/src/components/answer-button/style.scss
+++ b/src/components/answer-button/style.scss
@@ -10,7 +10,7 @@
   margin: calc(#{$grout} / 2);
   // cursor: pointer;
   background: $answer-background-color;
-  padding: 0;
+  padding: 0 !important;
   border: none;
   text-align: left;
 
